--- a/Front/index.html
+++ b/Front/index.html
@@ -112,6 +112,7 @@
                 <button id="preview-btn" class="btn-secondary"><i class="fas fa-eye"></i> Aperçu</button>
                 <button id="save-btn" class="btn-primary"><i class="fas fa-save"></i> Enregistrer</button>
                 <button id="share-btn" class="btn-primary"><i class="fas fa-share-alt"></i> Partager</button>
+                <button id="reset-btn" class="btn-danger"><i class="fas fa-trash"></i> Réinitialiser</button>
             </div>
         </section>
         
@@ -153,5 +154,20 @@
     </div>
 
     <script src="js/app.js"></script>
+
+    <!-- Popup de confirmation personnalisé -->
+    <div class="custom-confirm" id="reset-confirm">
+        <div class="custom-confirm-content">
+            <div class="custom-confirm-icon">
+                <i class="fas fa-exclamation-triangle"></i>
+            </div>
+            <h3 class="custom-confirm-title">Attention !</h3>
+            <p class="custom-confirm-message">Êtes-vous sûr de vouloir réinitialiser la page ? Cette action supprimera définitivement tous les éléments et ne pourra pas être annulée.</p>
+            <div class="custom-confirm-buttons">
+                <button class="custom-confirm-btn cancel" id="reset-cancel">Annuler</button>
+                <button class="custom-confirm-btn confirm" id="reset-confirm-btn">Réinitialiser</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
