Mise à jour style.css, index.html et ajout de Logo.png

--- a/Front/index.html
+++ b/Front/index.html
@@ -9,26 +9,34 @@
 </head>
 <body>
     <header>
-        <div class="logo">
-            <h1>PageDépart</h1>
+        <div class="logo" style="display: flex; align-items: center; gap: 10px;">
+            <img src="logo.png" alt="Logo de TheEnd.page" style="height: 60px;">
+            <h1 style="margin: 0;">TheEnd.page</h1>
         </div>
-        <nav>
-            <ul>
-                <li><a href="#accueil">Accueil</a></li>
-                <li><a href="#editeur">Créer</a></li>
-                <li><a href="#apropos">À propos</a></li>
-            </ul>
-        </nav>
     </header>
 
     <main>
         <section id="accueil" class="hero">
+            <div class="video-carousel">
+                <!-- Les 3 vidéos + clone de la première pour la boucle -->
+                <video src="https://videos.pexels.com/video-files/8135737/8135737-hd_1920_1080_25fps.mp4"
+                       autoplay muted loop playsinline></video>
+                <video src="
+                https://videos.pexels.com/video-files/5125962/5125962-uhd_2732_1440_30fps.mp4"
+                       autoplay muted loop playsinline></video>
+                <video src="https://videos.pexels.com/video-files/8044790/8044790-hd_1920_1080_25fps.mp4"
+                       autoplay muted loop playsinline></video>
+                <video src="https://videos.pexels.com/video-files/8135737/8135737-hd_1920_1080_25fps.mp4"
+                       autoplay muted loop playsinline></video>
+              </div>
             <div class="hero-content">
-                <h2>Créez votre page de départ unique</h2>
+                <h2>Parce que chaque départ mérite d’être racontée.</h2>
+                <p>Créez votre page de départ unique et partageable</p>
                 <p>Concevez facilement une page personnalisée avec notre éditeur glisser-déposer</p>
                 <a href="#editeur" class="btn-primary">Commencer maintenant</a>
             </div>
         </section>
+        
 
         <section id="editeur" class="editor-section">
             <h2>Créez votre page</h2>
@@ -176,13 +184,13 @@
         </div>
         
         <section id="apropos" class="about-section">
-            <h2>À propos de PageDépart</h2>
-            <p>PageDépart est un outil simple et puissant qui vous permet de créer des pages de départ personnalisées en quelques minutes. Que vous souhaitiez créer une page d'adieu dramatique, un message ironique ou une déclaration touchante, notre éditeur intuitif vous donne tous les outils nécessaires pour exprimer votre créativité.</p>
+            <h2>À propos de TheEnd.page</h2>
+            <p>TheEnd.page est un outil simple et puissant qui vous permet de créer des pages de départ.</p>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2023 PageDépart. Tous droits réservés.</p>
+        <p>&copy; 2025 TheEnd.page. Tous droits réservés.</p>
     </footer>
 
     <!-- Modal de partage -->
